apps/apps/dev/jenkins/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.${INTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rocketchat.${INTERNAL_DOMAIN}
  - secretName: jenkins-tls-internal
